# transaction_analysis_app

./: .coverage  .env  .env.example  .flake8  .gitignore  README.md  log_report_decorator.py  main.py  pyproject.toml  user_settings.json
data/: oper.xlsx  operations_1.xlsx  operations_2.xlsx  operations_error.json
src/: external_api.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_external_api.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
tests/__pycache__/: test_utils.cpython-313-pytest-8.3.4.pyc.21208
