[tool.poetry]
name = "transaction-analysis-app"
version = "0.1.0"
description = ""
authors = ["Olga Kazorina <nefertituolga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
requests = "^2.32.3"
masks = "^0.1.3"
path = "^17.1.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
pandas-stubs = "^2.2.3.241126"
types-requests = "^2.32.0.20241016"
types-python-dateutil = "^2.9.0.20241206"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
mypy = "^1.14.1"
isort = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = ['venv', 'tests']

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    )/
)
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
skip_gitignore = true


